--- a/README.org
+++ b/README.org
@@ -14,12 +14,14 @@ Simulate code execution of some chosen microcontrollers.
 - ATMega163 (small subset of instructions can be simulated)
 
 * TODO Next steps
+** TODO Add a comfortable testsuite: assembly + Racket tests
+** TODO Add tests for each instruction
 ** TODO Separate fetching and execution
 - fetch: analyzes the instruction and extracts its arguments
 - execute: takes the arguments and executes the instruction
 -> we can look at the code without executing it!
 -> the code might look less messy
-** TODO Add clock cycles
+** TODO Keep track of number of passed clock cycles
 ** TODO Opcode analysis: what is the Hamming weight of each opcode?
 ** TODO Work out the file-format for saved data
 * DONE FINISHED
