--- a/README.org
+++ b/README.org
@@ -15,7 +15,8 @@ Simulate code execution of some chosen microcontrollers.
 
 * TODO Next steps
 ** TODO Add a comfortable testsuite: assembly + Racket tests
-** TODO Add tests for each instruction
+** TODO Make a Racket module with nice abstractions instead of one huge file
+** TODO Add tests for each assembly instruction
 ** TODO Separate fetching and execution
 - fetch: analyzes the instruction and extracts its arguments
 - execute: takes the arguments and executes the instruction
